@@ -640,4 +640,13 @@ if ($TEXT_DIRECTION=='ltr') {
 	define ('PGV_RPARENS', ')&rlm;');
 }
 
+// define constants to be used when setting permissions after creating files/directories
+if (substr(PHP_SAPI, 0, 3) == 'cgi') {  // cgi-mode, should only be writable by owner
+	define('PGV_PERM_EXE',  0755);  // to be used on directories, php files and htaccess files
+	define('PGV_PERM_FILE', 0644);  // to be used on images, text files, etc
+} else { // mod_php mode, should be writable by everyone
+	define('PGV_PERM_EXE',  0777);
+	define('PGV_PERM_FILE', 0666);
+}
+
 ?>
